Update dependencies [2760]
Note: visad.jar was built from the GriddedLatLonSet branch today.